[package]
name = "protocol_product"
version = "0.2.0"
description = "Program for creating and managing products built on the Monaco Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol_product"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.17.2"
rust_decimal = "1.29.0"
